@@ -1,5 +1,5 @@
 #!/bin/sh -x
-CLASSPATH=../craftbukkit-1.2.5-R1.0.jar javac *.java -Xlint:unchecked -Xlint:deprecation
+CLASSPATH=../craftbukkit-1.2.5-R2.0.jar javac *.java -Xlint:unchecked -Xlint:deprecation
 rm -rf me 
 mkdir -p me/exphc/Writable
 mv *.class me/exphc/Writable
